@@ -2,14 +2,223 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <artifactId>com.pocketmath.stasov</artifactId>
         <groupId>com.pocketmath</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>matcher</artifactId>
+
+<!--
+    <modules>
+        <module>../stasov-util</module>
+    </modules>
+-->
+
+    <!--    <module>../attributes-devel</module> -->
+    <!--    <module>../attributes</module>
+        <module>../attributes-generated-glue</module>
+        <module>../stasov-util</module>
+        <module>../pocketql-grammars</module>
+        <module>../stasov-common</module>
+
+    </modules>-->
+
+    <dependencies>
+
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>stasov-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>stasov-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>attributes</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>attributes-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>attributes-generated-glue</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>pocketql-grammars</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>7.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+
+        <!--
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>stasov-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>stasov-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>attributes-generated-glue</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pocketmath</groupId>
+            <artifactId>pocketql-grammars</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.8</version>
+            <scope>test</scope>
+        </dependency>
+
+      <!--  <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
+            <version>4.5</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.5</version>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <!-- <pluginManagement> -->
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <argLine>-Xmx16384m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
+<!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+--><!--
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19</version>
+            </plugin>
+            -->
+<!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            -->
+
+
+            <!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <configuration>
+                    <dependenciesToScan>
+                        <dependency>
+                            <groupId>com.pocketmath</groupId>
+                            <artifactId>stasov-common</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>com.pocketmath</groupId>
+                            <artifactId>stasov-util</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>com.pocketmath</groupId>
+                            <artifactId>attributes-generated-glue</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>com.pocketmath</groupId>
+                            <artifactId>pocketql-grammars</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                        </dependency>
+                    </dependenciesToScan>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.pocketmath</groupId>
+                        <artifactId>stasov-common</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.pocketmath</groupId>
+                        <artifactId>stasov-util</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.pocketmath</groupId>
+                        <artifactId>attributes-generated-glue</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.pocketmath</groupId>
+                        <artifactId>pocketql-grammars</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                    </dependency>
+                </dependencies>
+            </plugin>-->
+        </plugins>
+        <!-- </pluginManagement> -->
+    </build>
 
     <!--<plugins>-->
         <!--<plugin>-->
